<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.medeagames.myapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:layout_width="500dp"
                android:layout_height="100dp"
                android:layout_margin="0dp"
                android:minHeight="0dp"
                android:src="@drawable/flaming_lotus"/>

            <!-- start/stop UI -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run"
                    android:id="@+id/run_button"
                    android:minHeight="0dp"
                    android:onClick="startPattern"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:minHeight="0dp"
                    android:id="@+id/stop_button"
                    android:onClick="stopPattern"/>
            </LinearLayout>

            <!-- ms per cell UI -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_ms_cell"
                    android:paddingRight="30dp"
                    android:paddingLeft="5dp"
                    android:id="@+id/textView2" />

                <!-- Dummy to get focus from EditText -->
                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px"/>

                <EditText
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1000"
                    android:background="@drawable/edit_backgound"
                    android:id="@+id/speed_ms" />
            </LinearLayout>

            <!-- repeat UI -->
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                android:id="@+id/repeatCheckbox"
                android:checked="false" />

            <!-- Table header -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/header">

                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_1"
                    android:id="@+id/ch1Header"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_2"
                    android:id="@+id/ch2Header" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_3"
                    android:id="@+id/ch3Header" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_4"
                    android:id="@+id/ch4Header" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_3"
                    android:id="@+id/ch5Header" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_4"
                    android:id="@+id/ch6Header" />
                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_3"
                    android:id="@+id/ch7Header" />

                <TextView
                    android:layout_width="@dimen/onOff_cell_width"
                    android:layout_height="20dp"
                    android:text="@string/ch_4"
                    android:id="@+id/ch8Header" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patternGrid">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

